; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xen/balloon/extr_balloon.c_current_target.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xen/balloon/extr_balloon.c_current_target.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64, i32, i32 }

@bs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @current_target to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @current_target() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 4), align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 3), align 8
  %4 = call i64 @min(i32 %2, i32 %3)
  store i64 %4, i64* %1, align 8
  %5 = load i64, i64* %1, align 8
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 0), align 8
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 1), align 8
  %8 = add i64 %6, %7
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 2), align 8
  %10 = add i64 %8, %9
  %11 = icmp ugt i64 %5, %10
  br i1 %11, label %12, label %18

12:                                               ; preds = %0
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 0), align 8
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 1), align 8
  %15 = add i64 %13, %14
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @bs, i32 0, i32 2), align 8
  %17 = add i64 %15, %16
  store i64 %17, i64* %1, align 8
  br label %18

18:                                               ; preds = %12, %0
  %19 = load i64, i64* %1, align 8
  ret i64 %19
}

declare dso_local i64 @min(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
